--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "1.65.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "react-redux": "^9.1.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-hook-form": "^7.51.5"
   },
   "devDependencies": {
