--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && scp -r ./dist/* zubastu:/var/www/salary_manager"
+    "deploy": "npm run build && scp -r ./dist/* salary:/var/www/frontend"
   },
   "dependencies": {
     "react": "^18.2.0",
