--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "deploy": "npm run build && scp -r ./dist/* salary:/var/www/frontend"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-transition-group": "^4.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "1.65.1",
-    "@reduxjs/toolkit": "^2.2.3",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "react-hook-form": "^7.51.5"
+    "react-transition-group": "^4.4.5",
+    "sass": "1.65.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
